Fix mobile spacing

--- a/src/components/css/Feed.css
+++ b/src/components/css/Feed.css
@@ -1,7 +1,6 @@
 .feed-flex {
   margin: 0 auto;
   align-items: center;
-  padding-top: 1rem;
   width: 100%;
 }
 
